# zhl

./: .gitignore  LICENSE  README.md  build.zig  build.zig.zon
benchmark/: bench.zig  cases.mjs  check_cases.mjs  check_corpus_regex_patterns.mjs  check_oniguruma_cases.mjs  differential_native.mjs  esm_bench.mjs  gate.sh  oracle_spans.mjs  package-lock.json  package.json  run_compare.sh  shiki.mjs  shiki_ecosystem.mjs  tree_sitter.mjs  visual_compare.mjs  vscode_textmate.mjs  wasm.mjs
benchmark/syntect/: Cargo.toml
benchmark/syntect/src/: main.rs  onig_cases.rs
benchmark/syntect/syntaxes/: TOML.sublime-syntax  TypeScript.sublime-syntax  Zig.sublime-syntax
benchmark/syntect_fancy/: Cargo.toml
corpus/: manifest.json
docs/: compatibility_reason_codes.md  corpus_summary.json  migration.md  native_dsl.md  public_api.md  tree_sitter.md  universal_offline_compatibility_plan.md  v1_parallel_execution_plan.md  v1_status.md  zhlb.md  zig_0_16_syntax_highlighting_engine_spec.md
examples/: editor_tokens.zig  tree_sitter_overlay.zig
grammars/: bash.zhl  bash.zhlb  c.zhl  c.zhlb  cpp.zhl  cpp.zhlb  csharp.zhl  csharp.zhlb  css.zhl  css.zhlb  go.zhl  go.zhlb  html.zhl  html.zhlb  java.zhl  java.zhlb  javascript.zhl  javascript.zhlb  json.zhl  json.zhlb  jsx.zhl  jsx.zhlb  kotlin.zhl  kotlin.zhlb  markdown.zhl  markdown.zhlb  php.zhl  php.zhlb  python.zhl  python.zhlb  ruby.zhl  ruby.zhlb  rust.zhl  rust.zhlb  sql.zhl  sql.zhlb  swift.zhl  swift.zhlb  toml.zhl  toml.zhlb  (+10 more)
src/: ByteMask256.zig  convert_common.zig  root.zig
tests/: fuzz.zig  golden.zig
(+673 files in other folders)
